# SituacionProblema1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SituacionProblema  busqueda.txt  cmake_install.cmake  ejemplo.txt  orders.txt  salida.txt
include/: CustomString.hpp  DataConverter.hpp  Dish.hpp  DishBST.hpp  Graph.hpp  Order.hpp  OrderManager.hpp  dataConverter.hpp
src/: CustomString.cpp  DataCoverter.cpp  Dish.cpp  DishBST.cpp  Graph.cpp  Order.cpp  OrderManager.cpp  main.cpp
